# ProteinPipe

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  Snakefile  appveyor.yml  build.cmd  build.ps1  build.sh  config.yaml  install.ps1  install.sh
cmake/Modules/: FindFREEGLUT.cmake
cpp/: pdb2xyz.cpp  viewer.cpp
cpp/include/: eigenvector.h  fitness.h  kabsch.h  lattice.h  mass.h  mass_optimizer.h  protein.h  utils.h
cpp/lib/: draw3d.hpp  object.hpp  protein.hpp
py/: BlenderPDBRec.py
